--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                    <p class="text-muted small mb-4 mb-lg-0">&copy; Página web 2022. Reservados todos los derechos.</p>
+                    <p class="">&copy; ESPE - ITIN 2022. Reservados todos los derechos.</p>
                 </div>
                 <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                     <ul class="list-inline mb-0">
