--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 <body>
     
     <div align="center" class="container">
-        <form class="formulario" action="formularioJosue">
+        <form class="formulario" action="#">
             <div class="sub-contenedor">
                 <div>
                     <label for="">Nombre</label>
@@ -59,8 +59,8 @@
             <label for="">Mensaje</label>
             <input type="textarea" name="" id="fmensaje" class="campo textA" placeholder="&#x1f4c4; |" required>
 
-            <label for="">Recapcha</label>  
-            <div class="g-recaptcha" data-sitekey="6LfMlQQhAAAAAO65-YB1rtM8oJ9Wlz5s-EDoq0z3"></div>          
+            <div id="fcaptcha" class="g-recaptcha" data-sitekey="6LergQQhAAAAABxv-64oh5Dbmi4yR7YfJyNVNAtI" ></div>   
+            <br>       
 
             <input type="submit" name="" id="fEnviar" value="Enviar" class="boton">
 
